--- a/animations.html
+++ b/animations.html
@@ -2,27 +2,30 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<style>
+	<title>juego para decorar</title>
+	<link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<style type="text/css" media="screen">
 	body{
 		padding: 0px;
 		margin: 0px;
 		background-color: #fff;
 
-	}	
-	
+	}
 	#juego{
 		width: 100%;
 		height: 100vh;
 		background-color: #000;
 	}
-	</style>
+</style>
 </head>
 <body>
-<div id="juego">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12 col-md-12" id="juego"></div>
+		</div>
 	</div>
 	<script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="assets/bower_components/phaser/build/phaser.min.js"></script>
-	<script src="assets/js/mina.js"></script>
+	<script src="assets/js/animations.js"></script>
 </body>
 </html>
