--- a/mapa.html
+++ b/mapa.html
@@ -4,35 +4,63 @@
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
+      #mapCanvas {
+        width: 500px;
+        height: 500px;
+        float: left;
       }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
+
+      #infoPanel {
+        float: left;
+        margin-left: 10px;
+      }
+
+      #infoPanel div {
+        margin-bottom: 5px;
       }
     </style>
   </head>
   <body>
-    <div id="map"></div>
-    <script>
-      // Note: This example requires that you consent to location sharing when
-      // prompted by your browser. If you see the error "The Geolocation service
-      // failed.", it means you probably did not give permission for the browser to
-      // locate you.
+    <div id="panel">
+  <!--<input id="city_country" type="textbox" value="Berlin, Germany">-->
+  <input type="button" value="Locate Me" onclick="initMap()">
+</div>
+<div id="mapCanvas"></div>
+<div id="infoPanel">
+  <b>Marker status:</b>
+  <div id="markerStatus"><i>Click and drag the marker.</i></div>
+  <b>Current position:</b>
+  <div id="info"></div>
+  <b>Closest matching address:</b>
+  <textarea id="address" class="form-control" onfocus="geolocate()"></textarea>
+  <button id="getPosition">Obtener</button>
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script>
+var map, infoWindow;
+var geocoder, marker;
+var YOUR_API_KEY="AIzaSyBK6zTJ2BhBgoKdO00LHMGrdpJC0H2HH0w";
+ 
+var placeSearch, autocomplete;
+  var componentForm = {
+    street_number: 'short_name',
+    route: 'long_name',
+    locality: 'long_name',
+    administrative_area_level_1: 'short_name',
+    country: 'long_name',
+    postal_code: 'short_name'
+  };  
+
 function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
+        geocoder = new google.maps.Geocoder();
+        map = new google.maps.Map(document.getElementById('mapCanvas'), {
           center: {lng: -99.133137, lat: 19.432883},
           zoom: 15
         });
-        var infoWindow = new google.maps.InfoWindow({map: map});
-
-        // Try HTML5 geolocation.
+       infoWindow = new google.maps.InfoWindow;
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
             var pos = {
@@ -40,15 +68,53 @@ function initMap() {
               lng: position.coords.longitude
             };
 
-            //infoWindow.setPosition(pos);
-            //infoWindow.setContent('Location found.');
-            map.setCenter(pos);
+            autocomplete = new google.maps.places.Autocomplete(document.getElementById('address'),{types: ['address']});
 
-            var marker = new google.maps.Marker({
+        // When the user selects an address from the dropdown, populate the address
+        // fields in the form.
+        autocomplete.addListener('place_changed', fillInAddress);
+
+            marker = new google.maps.Marker({
               position: pos,
               map: map,
-              title: 'Hello World!'
+              draggable: true,
+              title: 'Your position'
             });
+             $(document).on('click', '#getPosition', function(event) {
+                geocodeAddress(geocoder, map);
+              });
+            /*infoWindow.setPosition(pos);
+            infoWindow.setContent('Your position');
+            marker.addListener('click', function() {
+              infoWindow.open(map, marker);
+            });
+            infoWindow.open(map, marker);*/
+              map.setCenter(pos);
+              updateMarkerPosition(marker.getPosition());
+              //geocodePosition(pos);
+
+            // Add dragging event listeners.
+              google.maps.event.addListener(marker, 'dragstart', function() {
+                updateMarkerAddress('Dragging...');
+              });
+
+              google.maps.event.addListener(marker, 'drag', function() {
+                updateMarkerStatus('Dragging...');
+                updateMarkerPosition(marker.getPosition());
+              });
+
+              google.maps.event.addListener(marker, 'dragend', function() {
+                updateMarkerStatus('Drag ended');
+                geocodePosition(marker.getPosition());
+                map.panTo(marker.getPosition());
+              });
+
+              google.maps.event.addListener(map, 'click', function(e) {
+                updateMarkerPosition(e.latLng);
+                geocodePosition(marker.getPosition());
+                marker.setPosition(e.latLng);
+                map.panTo(marker.getPosition());
+              });
           }, function() {
             handleLocationError(true, infoWindow, map.getCenter());
           });
@@ -57,6 +123,51 @@ function initMap() {
           handleLocationError(false, infoWindow, map.getCenter());
         }
       }
+ function geocodeAddress(geocoder, resultsMap) {
+    var address = document.getElementById('address').value;
+    geocoder.geocode({'address': address}, function(results, status) {
+      if (status === 'OK') {
+        resultsMap.setCenter(results[0].geometry.location);
+        marker.setPosition(results[0].geometry.location);
+        /*marker = new google.maps.Marker({
+          map: resultsMap,
+          position: results[0].geometry.location
+        });*/
+      } else {
+        alert('Geocode was not successful for the following reason: ' + status);
+      }
+    });
+  }
+
+      function geocodePosition(pos) {
+        geocoder.geocode({
+          latLng: pos
+        }, function(responses) {
+          if (responses && responses.length > 0) {
+            updateMarkerAddress(responses[0].formatted_address);
+          } else {
+            updateMarkerAddress('Cannot determine address at this location.');
+          }
+        });
+      }
+
+      function updateMarkerStatus(str) {
+        document.getElementById('markerStatus').innerHTML = str;
+      }
+
+      function updateMarkerPosition(latLng) {
+        console.log(latLng);
+
+        document.getElementById('info').innerHTML = [
+            latLng.lat(),
+            latLng.lng()
+          ].join(', ');
+      }
+
+      function updateMarkerAddress(str) {
+        console.log(str);
+        document.getElementById('address').innerHTML = str;
+      }
 
       function handleLocationError(browserHasGeolocation, infoWindow, pos) {
         infoWindow.setPosition(pos);
@@ -64,9 +175,48 @@ function initMap() {
                               'Error: The Geolocation service failed.' :
                               'Error: Your browser doesn\'t support geolocation.');
       }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBK6zTJ2BhBgoKdO00LHMGrdpJC0H2HH0w&callback=initMap">
+
+       function fillInAddress() {
+        // Get the place details from the autocomplete object.
+        var place = autocomplete.getPlace();
+
+       /* for (var component in componentForm) {
+          document.getElementById(component).value = '';
+          document.getElementById(component).disabled = false;
+        }*/
+
+        // Get each component of the address from the place details
+        // and fill the corresponding field on the form.
+        for (var i = 0; i < place.address_components.length; i++) {
+          var addressType = place.address_components[i].types[0];
+          if (componentForm[addressType]) {
+            var val = place.address_components[i][componentForm[addressType]];
+              console.log(val);
+          }
+        }
+      }
+
+      function geolocate() {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var geolocation = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+            var circle = new google.maps.Circle({
+              center: geolocation,
+              radius: position.coords.accuracy
+            });
+            autocomplete.setBounds(circle.getBounds());
+          });
+        }
+      }
+
+    console.log("campaign");
+    var script = document.createElement("script");
+    script.type = "text/javascript";
+    document.getElementsByTagName("head")[0].appendChild(script);
+    script.src = "https://maps.googleapis.com/maps/api/js?key="+YOUR_API_KEY+"&libraries=places&callback=initMap";
     </script>
   </body>
 </html>
